Adding pancake, cars, and persons task

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello, This is my Github page</h1>
-    <a href="car">Car</a>
+    <a href="cars">Cars</a>
     <a href="pancake">Pancake</a>
     <a href="persons">Persons</a>
 
