--- a/cars/index.html
+++ b/cars/index.html
@@ -7,8 +7,9 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Car form</title>
+    <title>Cars</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="../favicon/faviconWhite32.svg">
 </head>
 <body>
 
