--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Projects</title>
+    <link rel="icon" type="image/x-icon" href="./favicon/faviconWhite32.svg">
+    
 </head>
 <body>
     <h1>Hello, This is my Github page</h1>
