Fix price update bug

--- a/pancake/index.html
+++ b/pancake/index.html
@@ -57,13 +57,13 @@
         <div class="delivery-method">
           <h3>Choose the delivery method:</h3>
           <div class="delivery-container">
-            <input type="radio" name="que" id="eatin" value="Eat In">
+            <input type="radio" name="delivery" id="eatin" value="0">
             <label for="eatin">Eat In (No charge)</label><br>
 
-            <input type="radio" name="que" id="pickup" value="Pick Up">
+            <input type="radio" name="delivery" id="pickup" value="0">
             <label for="pickup">Pick Up (No charge)</label><br>
 
-            <input type="radio" name="que" id="delivery" value="5">
+            <input type="radio" name="delivery" id="delivery" value="5">
             <label for="delivery">Delivery - €5</label>
           </div>
         </div>
