Write portfolio link in index file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="cars">Cars</a>
     <a href="pancake">Pancake</a>
     <a href="persons">Persons</a>
+    <a href="portfolio">Portfolio</a>
 
 </body>
 </html>
