--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#projects">Project</a></li>
                 <li> <a href="#aboutme">About me</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#form">Contact me</a></li>
+                <li><a href="#form-container">Contact me</a></li>
                 <li><a href="gallery/gallery.html" target="_blank">Gallery</a></li>
                 <li><a href="https://www.bc.fi/" target="_blank">More about BCH</a></li>
             </ul>  
@@ -99,7 +99,7 @@
                 </div>    
             </div> 
         </section>
-        <div class="form-container">
+        <div id="form-container">
             <div id="form">
                 <h4>Contact me</h4>
                 <div class="form-row">
