Add arrow image in back to top button

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -138,7 +138,7 @@
     </main>     
     <footer>
         <p>Copyright &copy my website 2024</p>
-        <button id="backTop">Back to top</button>
+        <button id="backTop"><img src="./image/scrollToTopArrow.svg" alt=""></button>
     </footer>   
     </div>  
     <script src="main.js"></script>  
