deploy jampa app

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <a href="pancake">Pancake</a>
     <a href="persons">Persons</a>
     <a href="portfolio">Portfolio</a>
-
+    <a href="jampa">JAMPA</a>
 </body>
 </html>
