--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,30 +35,30 @@
             <div id="projects">
                 <div class="box">
                     <img class="image" src="./image/project_camera.jpg" alt="camera">
-                    <h4>Lorem ipsum dolor sit</h4>
-                    <p>HTML, CSS, JavaScript</p>
-                    <a href="#">See more</a>
+                    <h4>Jampa Music App</h4>
+                    <p>React, Bootstrap</p>
+                    <a href="https://github.com/nikiluzianin/JAMPA" target="_blank">See more</a>
                 </div>
 
                 <div class="box">
                     <img src="./image/project_workingOnLaptop.jpg" alt="Laptop">
-                    <h4>Lorem ipsum dolor sit</h4>
-                    <p>Ux design layputs</p>
-                    <a href="#">See more</a>
+                    <h4>Employee App</h4>
+                    <p>React, Express</p>
+                    <a href="https://github.com/Pujakumari1511/employeeApp" target="_blank">See more</a>
                 </div>
                 
                 <div class="box">
                     <img src="./image/project_sky.jpg" alt="sky">
-                    <h4>Lorem ipsum dolor sit</h4>
-                    <p>ReactJS, NodeJS</p>
-                    <a href="#">See more</a>
+                    <h4>Recipes App</h4>
+                    <p>React, Express, Bootstrap, Mongodb</p>
+                    <a href="https://github.com/Pujakumari1511/recipe" target="_blank">See more</a>
                 </div>
             </div>  
         </section>
         <section>
             <h2>About Me</h2>
             <div id="aboutme" >
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum animi neque a id, perspiciatis, distinctio eos ex corrupti dolor, hic laudantium ipsum labore minima saepe quisquam totam impedit veritatis beatae.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum animi neque a id, perspiciatis, distinctio eos ex corrupti dolor, hic laudantium ipsum labore minima saepe quisquam totam impedit veritatis beatae.</p>
+                <p>Enthusiastic and detail-oriented web developer with a strong academic background in modern web technologies. Experienced in creating full-stack applications, collaborating on team projects, and solving real-world problems. Looking to leverage my skills and passion in a challenging internship.</p>
                 <img src="./image/about_me.jpg" alt="About me">  
             </div>
         </section>
@@ -83,16 +83,16 @@
                 </div>
                 
                 <div class="skillBox">
-                    <img src="./image/teachingIcon.jpg" alt="teachingIcon">
-                    <h5>Teaching</h5>
+                    <img src="./image/react.png" alt="teachingIcon">
+                    <h5>React</h5>
                     <div class="progress-bar">
                         <div class="bar bar-50"></div>
                     </div>  
                 </div>
 
                 <div class="skillBox">
-                    <img src="./image/couchingIcon.jpg" alt="couchingIcon">
-                    <h5>Couching</h5>
+                    <img src="./image/js.jpeg" alt="couchingIcon">
+                    <h5>JavaScript</h5>
                     <div class="progress-bar">
                         <div class="bar bar-40"></div>
                     </div>  
